# Robot_Vacuum_Cleaner_ROS2

./: .gitignore  README.md
src/nav2_vacuum/: package.xml  setup.py
src/nav2_vacuum/config/: mapper_params.yaml  nav2_params.yaml
src/nav2_vacuum/launch/: nav2.launch.py  slam.launch.py
src/nav2_vacuum/maps/: my_map.pgm  my_map.yaml
src/robot_description/: CMakeLists.txt  package.xml  robot_config.json
src/robot_description/assets/: base_link.part  base_link.stl  camera.part  caster_wheel.part  caster_wheel.stl  lidar.part  lidar.stl  roof.part  roof.stl  wheel.part  wheel.stl
src/robot_description/launch/: gz_custom.launch.py  (+2 more)
src/robot_vacuum_description/: CMakeLists.txt  package.xml  robot_vacuum_config.json
src/robot_vacuum_description/assets/: base_link.part  base_link.stl  camera.part  camera.stl  caster_frame.part  caster_frame.stl  caster_wheel.part  caster_wheel.stl  lidar.part  lidar.stl  roof.part  wheel.part  wheel.stl
src/robot_vacuum_description/launch/: gz_custom.launch.py  gz_empty.launch.py  rviz.launch.py
src/robot_vacuum_description/rviz/: rviz_config.rviz
src/robot_vacuum_description/urdf/: robot_vacuum.urdf.xacro
src/robot_vacuum_description/urdf/gazebo/: gazebo_plugins.xacro  gazebo_properties.xacro
src/robot_vacuum_description/urdf/modules/: base_and_wheels.xacro  camera.xacro  lidar.xacro
src/robot_vacuum_description/urdf/xacro_properties/: xacro_properties.xacro
src/robot_vacuum_description/worlds/: living_room.sdf
src/robot_vacuum_description/yaml/: gazebo_bridge.yaml
src/yolo_pkg/: package.xml  setup.py
(+10 files in other folders)
